crates/rumps-query/snapshots/scripts__02_arithmetic.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: parse and evaluate arithmetic\n; Tests arithmetic operators with correct precedence\n\n; Basic operations\nLET add = 10 + 5\nWRITE add\n; Expected: 15\n\nLET sub = 10 - 5\nWRITE sub\n; Expected: 5\n\nLET mul = 10 * 5\nWRITE mul\n; Expected: 50\n\n; Division requires Float operands\nLET div = 10.0 / 4.0\nWRITE div\n; Expected: 2.5\n\nLET intdiv = 10 // 4\nWRITE intdiv\n; Expected: 2\n\nLET modulo = 10 % 3\nWRITE modulo\n; Expected: 1\n\n; Precedence: mul/div before add/sub\nLET prec1 = 2 + 3 * 4\nWRITE prec1\n; Expected: 14 (not 20)\n\n; Division with floats\nLET prec2 = 10.0 - 6.0 / 2.0\nWRITE prec2\n; Expected: 7.0 (not 2.0)\n\n; Parentheses override precedence\nLET paren1 = (2 + 3) * 4\nWRITE paren1\n; Expected: 20\n\nLET paren2 = (10.0 - 6.0) / 2.0\nWRITE paren2\n; Expected: 2.0\n\n; Unary minus\nLET neg = -5\nWRITE neg\n; Expected: -5\n\nLET neg2 = 10 + -3\nWRITE neg2\n; Expected: 7\n\n; Nested operations (using floor division for integers)\nLET complex = ((1 + 2) * (3 + 4)) // 7\nWRITE complex\n; Expected: 3\n\n; Float arithmetic\nLET f1 = 3.14 * 2.0\nWRITE f1\n; Expected: 6.28\n\nLET f2 = 10.0 / 4.0\nWRITE f2\n; Expected: 2.5\n\n; Same-type arithmetic with explicit conversion\nLET mixed = (10 AS Float) + 0.5\nWRITE mixed\n; Expected: 10.5\n\nWRITE \"Arithmetic test complete\"\n"
---
15
5
50
2.5
2
1
14
7.0
20
2.0
-5
7
3
6.28
2.5
10.5
"Arithmetic test complete"
