crates/rumps-query/snapshots/scripts__04_set_locals.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: @set locals (B-tree variables)\n; Tests @set for local variables with subscripts\n\nfun main() {\n  ; Simple @set without subscripts (use {} for root ref)\n  @set x{} 100\n  write :display(@get x{})\n  ; Expected: 100\n\n  @set x{} 200\n  write :display(@get x{})\n  ; Expected: 200\n\n  ; @set with single subscript\n  @set items{1} \"first\"\n  @set items{2} \"second\"\n  @set items{3} \"third\"\n\n  ; @set with multiple subscripts\n  @set patient{123, \"name\"} \"John Doe\"\n  @set patient{123, \"age\"} 45\n  @set patient{123, \"active\"} true\n\n  @set patient{456, \"name\"} \"Jane Smith\"\n  @set patient{456, \"age\"} 32\n  @set patient{456, \"active\"} false\n\n  ; Nested subscripts\n  @set tree{1, 2, 3} \"deep\"\n  @set tree{1, 2, 4} \"also deep\"\n\n  ; Mixed subscript types\n  @set mixed{\"key\", 42, true} \"mixed types\"\n\n  ; Numeric subscripts\n  @set arr{0} \"zero\"\n  @set arr{1} \"one\"\n  @set arr{10} \"ten\"\n  @set arr{100} \"hundred\"\n\n  ; String subscripts\n  @set dict{\"alpha\"} 1\n  @set dict{\"beta\"} 2\n  @set dict{\"gamma\"} 3\n\n  write \"@set locals test complete\"\n}\n"
---
Option.Some(100)
Option.Some(200)
@set locals test complete
