crates/rumps-query/snapshots/scripts__06_globals.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: SET and GET globals\n; Tests global variable operations (require transaction)\n; NOTE: Globals require TRANSACTION blocks\n\n; This should work inside a transaction\nTRANSACTION {\n  SET ^PATIENT(1, \"name\") = \"Alice\"\n  SET ^PATIENT(1, \"age\") = 25\n  SET ^PATIENT(2, \"name\") = \"Bob\"\n  SET ^PATIENT(2, \"age\") = 30\n\n  ; GET within same transaction\n  LET n = GET ^PATIENT(1, \"name\")\n  OUTPUT n\n  ; Expected: Alice\n\n  LET a = GET ^PATIENT(1, \"age\")\n  OUTPUT a\n  ; Expected: 25\n}\n\n; Read committed data in new transaction\nTRANSACTION {\n  LET name1 = GET ^PATIENT(1, \"name\")\n  OUTPUT name1\n  ; Expected: Alice\n\n  LET name2 = GET ^PATIENT(2, \"name\")\n  OUTPUT name2\n  ; Expected: Bob\n}\n\n; Multiple globals\nTRANSACTION {\n  SET ^CONFIG(\"version\") = \"1.0.0\"\n  SET ^CONFIG(\"debug\") = FALSE\n  SET ^COUNTER = 0\n  SET ^COUNTER = 1\n}\n\nTRANSACTION {\n  LET ver = GET ^CONFIG(\"version\")\n  OUTPUT ver\n  ; Expected: 1.0.0\n\n  LET cnt = GET ^COUNTER\n  OUTPUT cnt\n  ; Expected: 1\n}\n\nOUTPUT \"Globals test complete\"\n"
---
ERROR: parse error at 181..182: unexpected `{` (expected: AND, ||, |>, *, IS, ., <=, <, (, +, [, >=, dedent, >, //, -, ?., AS, ==, /, newline, ??, indent, &&, !=, OR, **, ++, READ, %)
