crates/rumps-query/snapshots/scripts__08_if_else.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: IF/ELSE branches\n; Tests conditional expressions and statements\n\n; Simple IF with true condition\nIF TRUE {\n  OUTPUT \"TRUE branch taken\"\n}\n\n; Simple IF with false condition (no output)\nIF FALSE {\n  OUTPUT \"This should not print\"\n}\n\n; IF/ELSE with true condition\nIF TRUE {\n  OUTPUT \"IF branch\"\n} ELSE {\n  OUTPUT \"ELSE branch\"\n}\n; Expected: IF branch\n\n; IF/ELSE with false condition\nIF FALSE {\n  OUTPUT \"IF branch\"\n} ELSE {\n  OUTPUT \"ELSE branch\"\n}\n; Expected: ELSE branch\n\n; IF with comparison\nLET x = 10\nIF x > 5 {\n  OUTPUT \"x is greater than 5\"\n} ELSE {\n  OUTPUT \"x is not greater than 5\"\n}\n; Expected: x is greater than 5\n\n; IF with equality\nLET name = \"Alice\"\nIF name == \"Alice\" {\n  OUTPUT \"Hello, Alice!\"\n} ELSE {\n  OUTPUT \"You are not Alice\"\n}\n; Expected: Hello, Alice!\n\n; IF as expression\nLET result = IF 10 > 5 { \"big\" } ELSE { \"small\" }\nOUTPUT result\n; Expected: big\n\n; Nested IF\nLET score = 85\nIF score >= 90 {\n  OUTPUT \"A\"\n} ELSE {\n  IF score >= 80 {\n    OUTPUT \"B\"\n  } ELSE {\n    IF score >= 70 {\n      OUTPUT \"C\"\n    } ELSE {\n      OUTPUT \"F\"\n    }\n  }\n}\n; Expected: B\n\n; IF with logical operators\nLET a = TRUE\nLET b = FALSE\nIF a AND NOT b {\n  OUTPUT \"a is true and b is false\"\n}\n; Expected: a is true and b is false\n\n; IF with complex condition\nLET age = 25\nLET hasLicense = TRUE\nIF age >= 18 AND hasLicense {\n  OUTPUT \"Can drive\"\n} ELSE {\n  OUTPUT \"Cannot drive\"\n}\n; Expected: Can drive\n\nOUTPUT \"IF/ELSE test complete\"\n"
---
TRUE branch taken
IF branch
ELSE branch
x is greater than 5
Hello, Alice!
big
B
a is true and b is false
Can drive
IF/ELSE test complete
