crates/rumps-query/snapshots/scripts__09_comparison.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: comparison operators\n; Tests all comparison operators\n\nfun main() {\n  ; Equality\n  write 5 == 5\n  ; Expected: true\n\n  write 5 == 6\n  ; Expected: false\n\n  write \"abc\" == \"abc\"\n  ; Expected: true\n\n  write \"abc\" == \"def\"\n  ; Expected: false\n\n  write true == true\n  ; Expected: true\n\n  write true == false\n  ; Expected: false\n\n  ; Inequality\n  write 5 != 6\n  ; Expected: true\n\n  write 5 != 5\n  ; Expected: false\n\n  ; Less than\n  write 5 < 10\n  ; Expected: true\n\n  write 10 < 5\n  ; Expected: false\n\n  write 5 < 5\n  ; Expected: false\n\n  ; Greater than\n  write 10 > 5\n  ; Expected: true\n\n  write 5 > 10\n  ; Expected: false\n\n  write 5 > 5\n  ; Expected: false\n\n  ; Less than or equal\n  write 5 <= 10\n  ; Expected: true\n\n  write 5 <= 5\n  ; Expected: true\n\n  write 10 <= 5\n  ; Expected: false\n\n  ; Greater than or equal\n  write 10 >= 5\n  ; Expected: true\n\n  write 5 >= 5\n  ; Expected: true\n\n  write 5 >= 10\n  ; Expected: false\n\n  ; Float comparisons\n  write 3.14 < 3.15\n  ; Expected: true\n\n  write 2.5 >= 2.5\n  ; Expected: true\n\n  ; Same-type comparisons (no implicit coercion)\n  write 5 < 6\n  ; Expected: true\n\n  write 5.0 == 5.0\n  ; Expected: true\n\n  ; String comparisons (lexicographic)\n  write \"abc\" < \"abd\"\n  ; Expected: true\n\n  write \"abc\" < \"ab\"\n  ; Expected: false\n\n  write \"apple\" < \"banana\"\n  ; Expected: true\n\n  ; Chained comparisons via variables\n  let a = 5\n  let b = 10\n  let c = 15\n  write a < b\n  ; Expected: true\n\n  write b < c\n  ; Expected: true\n\n  write a < c\n  ; Expected: true\n\n  write \"Comparison test complete\"\n}\n"
---
true
false
true
false
true
false
true
false
true
false
false
true
false
false
true
true
false
true
true
false
true
true
true
true
true
false
true
true
true
true
Comparison test complete
