crates/rumps-query/snapshots/scripts__100_regex.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Regex pattern matching\n; Tests regex literals and matches operator\n\nfun main() {\n  ; ============ Basic matching ============\n\n  ; Simple pattern\n  write \"hello\" matches /hello/  ; true\n  write \"world\" matches /hello/  ; false\n\n  ; Partial match (regex finds pattern anywhere)\n  write \"hello world\" matches /world/  ; true\n  write \"say hello\" matches /hello/  ; true\n\n  ; ============ Character classes ============\n\n  ; Digit matching\n  write \"abc123\" matches /\\d+/  ; true\n  write \"abc\" matches /\\d+/  ; false\n\n  ; Word characters\n  write \"hello_world\" matches /\\w+/  ; true\n\n  ; Whitespace\n  write \"hello world\" matches /\\s/  ; true\n  write \"helloworld\" matches /\\s/  ; false\n\n  ; ============ Anchors ============\n\n  ; Start anchor\n  write \"hello world\" matches /^hello/  ; true\n  write \"say hello\" matches /^hello/  ; false\n\n  ; End anchor\n  write \"hello world\" matches /world$/  ; true\n  write \"worldly\" matches /world$/  ; false\n\n  ; Full match with both anchors\n  write \"hello\" matches /^hello$/  ; true\n  write \"hello world\" matches /^hello$/  ; false\n\n  ; ============ Quantifiers ============\n\n  ; Zero or more\n  write \"goood\" matches /go*d/  ; true\n  write \"gd\" matches /go*d/  ; true\n\n  ; One or more\n  write \"goood\" matches /go+d/  ; true\n  write \"gd\" matches /go+d/  ; false\n\n  ; Optional\n  write \"color\" matches /colou?r/  ; true\n  write \"colour\" matches /colou?r/  ; true\n\n  ; ============ Alternation ============\n\n  write \"cat\" matches /cat|dog/  ; true\n  write \"dog\" matches /cat|dog/  ; true\n  write \"bird\" matches /cat|dog/  ; false\n\n  ; ============ Groups ============\n\n  write \"abab\" matches /(ab)+/  ; true\n  write \"ab\" matches /(ab)+/  ; true\n\n  ; ============ Stringable operand ============\n\n  ; Integer (converts to string)\n  write 123 matches /\\d+/  ; true\n  write 123 matches /^123$/  ; true\n\n  ; Float\n  write 3.14 matches /3\\.14/  ; true\n\n  ; Boolean\n  write true matches /true/  ; true\n  write false matches /false/  ; true\n\n  ; ============ Variables ============\n\n  let text = \"The quick brown fox\"\n  let pat = /quick/\n  write text matches pat  ; true\n\n  let email-pattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$/\n  write \"test@example.com\" matches email-pattern  ; true\n  write \"invalid-email\" matches email-pattern  ; false\n\n  ; ============ Case sensitivity ============\n\n  ; Regex is case-sensitive by default\n  write \"Hello\" matches /hello/  ; false\n  write \"Hello\" matches /Hello/  ; true\n\n  ; ============ Special characters ============\n\n  ; Escaped special chars\n  write \"a.b\" matches /a\\.b/  ; true\n  write \"a*b\" matches /a\\*b/  ; true\n  write \"a+b\" matches /a\\+b/  ; true\n\n  ; ============ Precedence ============\n\n  ; matches has lower precedence than comparison\n  let x = 5\n  write (x > 3) and (\"test\" matches /test/)  ; true\n}\n"
---
true
false
true
true
true
false
true
true
false
true
false
true
false
true
false
true
true
true
false
true
true
true
true
false
true
true
true
true
true
true
true
true
true
false
false
true
true
true
true
true
