crates/rumps-query/snapshots/scripts__101_data_primitive.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; @data primitive tests\n; NOTE: Uses locals only; globals require transaction blocks\n\nfun main() {\n  ; === Setup: create test data ===\n\n  @set vars{1} \"value at 1\"\n  @set vars{1, \"A\"} \"value at 1,A\"\n  @set vars{2, \"B\", \"C\"} \"deep value\"\n\n  ; === @data on non-existent key ===\n\n  let status0 = @data vars{999}\n  write :display(status0)\n\n  ; === @data on key with value only ===\n\n  ; Key {1, \"A\"} has value but no descendants\n  let status1 = @data vars{1, \"A\"}\n  write :display(status1)\n\n  ; === @data on key with descendants only ===\n\n  ; Key {2} has no value but has descendants at {2, \"B\", ...}\n  let status2 = @data vars{2}\n  write :display(status2)\n\n  ; === @data on key with both value and descendants ===\n\n  ; Key {1} has value and descendants at {1, \"A\"}\n  let status3 = @data vars{1}\n  write :display(status3)\n\n  ; === Pattern matching on DataStatus ===\n\n  write describe(@data vars{999})\n  write describe(@data vars{1, \"A\"})\n  write describe(@data vars{2})\n  write describe(@data vars{1})\n\n  ; === as Int coercion (MUMPS $@data values) ===\n\n  write (@data vars{999}) as Int\n  write (@data vars{1, \"A\"}) as Int\n  write (@data vars{2}) as Int\n  write (@data vars{1}) as Int\n\n  ; === DataStatus in expressions ===\n\n  write has-data(@data vars{999})\n  write has-data(@data vars{1})\n\n  ; === Type annotation ===\n\n  let typed: DataStatus = @data vars{1}\n  write :display(typed)\n\n  ; === DataStatus in arrays ===\n\n  let statuses: Array[DataStatus] = [\n    @data vars{999},\n    @data vars{1, \"A\"},\n    @data vars{2},\n    @data vars{1}\n  ]\n  write Iterable:length(statuses)\n  write :display(Mappable:map(describe, statuses))\n\n  ; === read DataStatus from Int ===\n\n  let from0 = 0 read DataStatus\n  let from1 = 1 read DataStatus\n  let from10 = 10 read DataStatus\n  let from11 = 11 read DataStatus\n  let invalid = 5 read DataStatus\n\n  write :display(from0)\n  write :display(from1)\n  write :display(from10)\n  write :display(from11)\n  write :display(invalid)\n}\n\nfun describe(s: DataStatus) -> String {\n  match s {\n    DataStatus.NoData => { \"no data\" }\n    DataStatus.HasValue => { \"has value\" }\n    DataStatus.HasDescendants => { \"has descendants\" }\n    DataStatus.Both => { \"both\" }\n  }\n}\n\nfun has-data(s: DataStatus) -> Bool {\n  (s as Int) > 0\n}\n"
---
DataStatus.NoData
DataStatus.HasValue
DataStatus.HasDescendants
DataStatus.Both
no data
has value
has descendants
both
0
1
10
11
false
true
DataStatus.Both
4
[ "no data", "has value", "has descendants", "both" ]
Result.Ok(DataStatus.NoData)
Result.Ok(DataStatus.HasValue)
Result.Ok(DataStatus.HasDescendants)
Result.Ok(DataStatus.Both)
Result.Err("invalid DataStatus value: 5 (expected 0, 1, 10, or 11)")
